--- a/addons/bliki-parser/pom.xml
+++ b/addons/bliki-parser/pom.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+    
 	<parent>
-		<groupId>org.jamwiki</groupId>
+		<groupId>com.github.km-works</groupId>
 		<artifactId>addons</artifactId>
 		<version>2.0-SNAPSHOT</version>
 	</parent>
+    
 	<artifactId>bliki-parser</artifactId>
 	<packaging>jar</packaging>
 	<name>Bliki Parser</name>
+    
 	<repositories>
 		<repository>
 			<id>info-bliki-repository</id>
@@ -31,11 +34,13 @@
 			</snapshots>
 		</repository>
 	</repositories>
+    
 	<dependencies>
-		<dependency>
-			<groupId>info.bliki.wiki</groupId>
-			<artifactId>bliki-core</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>info.bliki.wiki</groupId>
+            <artifactId>bliki-core</artifactId>
+            <version>3.0.19</version>
+        </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
