--- a/addons/jamwiki-jflex-parser-tags/pom.xml
+++ b/addons/jamwiki-jflex-parser-tags/pom.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+    
 	<parent>
-		<groupId>org.jamwiki</groupId>
+		<groupId>com.github.km-works</groupId>
 		<artifactId>addons</artifactId>
 		<version>2.0-SNAPSHOT</version>
 	</parent>
+    
 	<artifactId>jamwiki-jflex-parser-tags</artifactId>
 	<packaging>jar</packaging>
 	<name>JAMWiki JFlex Parser Additional Tags</name>
+    
 	<dependencies>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -46,6 +49,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+    
 	<build>
 		<plugins>
 			<plugin>
