--- a/jamwiki-core/pom.xml
+++ b/jamwiki-core/pom.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+    
 	<parent>
-		<groupId>org.jamwiki</groupId>
-		<artifactId>jamwiki</artifactId>
+		<groupId>com.github.km-works</groupId>
+		<artifactId>jamwiki2</artifactId>
 		<version>2.0-SNAPSHOT</version>
 	</parent>
+    
 	<artifactId>jamwiki-core</artifactId>
 	<packaging>jar</packaging>
 	<name>JAMWiki Core</name>
+    
 	<dependencies>
 		<dependency>
 			<groupId>commons-codec</groupId>
@@ -48,6 +51,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
+		 <version>4.11</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -79,6 +83,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+    
 	<build>
 		<plugins>
 			<plugin>
@@ -127,6 +132,7 @@
 						<exclude>**/TestSearchEngine.java</exclude>
 					</excludes>
 				</configuration>
+			 <version>2.15</version>
 			</plugin>
 		</plugins>
 	</build>
