--- a/jamwiki-war/pom.xml
+++ b/jamwiki-war/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.jamwiki</groupId>
-		<artifactId>jamwiki</artifactId>
+		<groupId>com.github.km-works</groupId>
+		<artifactId>jamwiki2</artifactId>
 		<version>2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>jamwiki-war</artifactId>
@@ -76,14 +76,40 @@
 	<build>
 		<finalName>jamwiki-${project.version}</finalName>
 		<plugins>
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.26</version>
-				<configuration>
-					<contextPath>/jamwiki</contextPath>
-				</configuration>
-			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.github.jsimone</groupId>
+                                    <artifactId>webapp-runner</artifactId>
+                                    <version>8.5.5.0</version>
+                                    <destFileName>webapp-runner.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>unpack-dependencies</id>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeArtifactIds>jamwiki-core</includeArtifactIds>
+                            <includes>sql/**,templates/**,pages/**</includes>
+                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 			<!--
 			Currently the sql.*.properties files, default topic files and HTML template
 			fragments are in the jamwiki-core.jar file.  To make it easy for sites to
@@ -91,27 +117,27 @@
 			unpack these files from the JAR and place them into the WEB-INF/classes
 			folder.
 			
-			NOTE: *.txt files currently won't unpack - a bug report has been filed with
-			the Maven team (http://jira.codehaus.org/browse/MDEP-258).
-			-->
-			<!-- Error-prone with 'mvn test' due to -->
-			<!-- http://jira.codehaus.org/browse/MDEP-98 and http://jira.codehaus.org/browse/MDEP-194 -->
-			<plugin>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack-dependencies</id>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeArtifactIds>jamwiki-core</includeArtifactIds>
-							<includes>sql/**,templates/**,pages/**</includes>
-							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> 
-		</plugins>
-	</build>
+            NOTE: *.txt files currently won't unpack - a bug report has been filed with
+            the Maven team (http://jira.codehaus.org/browse/MDEP-258).
+            -->
+            <!-- Error-prone with 'mvn test' due to -->
+            <!-- http://jira.codehaus.org/browse/MDEP-98 and http://jira.codehaus.org/browse/MDEP-194 -->
+            <!--plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-dependencies</id>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeArtifactIds>jamwiki-core</includeArtifactIds>
+                            <includes>sql/**,templates/**,pages/**</includes>
+                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin--> 
+        </plugins>
+    </build>
 </project>
