--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <maven.version>3.3.0</maven.version>
         <slf4j.version>1.7.23</slf4j.version>
         
@@ -149,7 +149,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.7</version>
+                <version>4.12</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -359,18 +359,19 @@
                     </descriptors>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <configuration>
+                    <excludePackageNames>org.jamwiki.parser.jflex</excludePackageNames>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <!-- FIXME merge versions and configs with pluginManagement if possible -->
     <reporting>
         <plugins>
-            <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
-            </plugin>
             <plugin>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.7</version>
@@ -491,9 +492,16 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <configLocation>config/google_checks.xml</configLocation>
+                </configuration>
+            </plugin>
         </plugins>
     </reporting>
-    
+
     <developers>
         <!--
        See http://www.ohloh.net/p/jamwiki/contributors
