--- a/addons/bliki-parser/pom.xml
+++ b/addons/bliki-parser/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.github.km-works</groupId>
 		<artifactId>addons</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
     
 	<artifactId>bliki-parser</artifactId>
