--- a/jamwiki-war/pom.xml
+++ b/jamwiki-war/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.km-works</groupId>
 		<artifactId>jamwiki2</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	<artifactId>jamwiki-war</artifactId>
 	<packaging>war</packaging>
