--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     
     <groupId>com.github.km-works</groupId>
     <artifactId>jamwiki2</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>pom</packaging>
     
-    <name>JAMWiki2 Parent</name>
+    <name>JamWiki2 Parent</name>
     <description>
-        JAMWiki2 is a Java-based Wiki engine which offers many features of MediaWiki.
+        JamWiki2 is a Java-based wiki application that offers the same syntax as MediaWiki and many of its features.
     </description>
     <url>https://github.com/km-works/jamwiki2</url>
     
@@ -105,11 +105,6 @@
                 <version>2.4</version>
             </dependency>
             <dependency>
-                <groupId>de.congrace</groupId>
-                <artifactId>exp4j</artifactId>
-                <version>0.3.3</version>
-            </dependency>
-            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.1</version>
@@ -125,9 +120,14 @@
                 <version>2.2.9</version>
             </dependency>
             <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-core</artifactId>
+                <version>2.5.7</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.mail</groupId>
                 <artifactId>mail</artifactId>
-                <version>1.4.1</version>
+                <version>1.4.7</version>
             </dependency>
             <dependency>
                 <groupId>javax.servlet.jsp</groupId>
@@ -147,15 +147,9 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.12</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>net.sf.ehcache</groupId>
-                <artifactId>ehcache-core</artifactId>
-                <version>2.5.0</version>
+                <groupId>taglibs</groupId>
+                <artifactId>standard</artifactId>
+                <version>1.1.2</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -205,11 +199,6 @@
                 <groupId>org.apache.lucene</groupId>
                 <artifactId>lucene-queryparser</artifactId>
                 <version>${lucene.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>net.tanesha.recaptcha4j</groupId>
-                <artifactId>recaptcha4j</artifactId>
-                <version>0.0.7</version>
             </dependency>
             <!--
             these two dependencies aren't explicitly needed, but without explicitly
@@ -272,9 +261,20 @@
                 <version>1.0</version>
             </dependency>
             <dependency>
-                <groupId>taglibs</groupId>
-                <artifactId>standard</artifactId>
-                <version>1.1.2</version>
+                <groupId>de.congrace</groupId>
+                <artifactId>exp4j</artifactId>
+                <version>0.3.11</version>
+            </dependency>
+            <dependency>
+                <groupId>net.tanesha.recaptcha4j</groupId>
+                <artifactId>recaptcha4j</artifactId>
+                <version>0.0.7</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -368,6 +368,12 @@
                     <destDir>apidocs</destDir>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jdepend-maven-plugin</artifactId>
+                <version>2.0</version>
+                <!-- See: http://www.mojohaus.org/jdepend-maven-plugin/ -->
+            </plugin>
         </plugins>
     </build>
     <!-- FIXME merge versions and configs with pluginManagement if possible -->
@@ -395,7 +401,7 @@
                     <rulesets>
                         <ruleset>${basedir}/pmd.xml</ruleset>
                     </rulesets>
-                    <targetJdk>1.7</targetJdk>
+                    <targetJdk>1.8</targetJdk>
                 </configuration>
             </plugin>
             <plugin>
@@ -412,7 +418,7 @@
                             <report>license</report>
                             <report>scm</report>
                             <report>summary</report>
-                            <report>jdepend</report>
+                            <!--report>jdepend</report-->
                         </reports>
                     </reportSet>
                 </reportSets>
@@ -467,12 +473,8 @@
                     <relaxed>true</relaxed>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0</version>
-            </plugin>
-            <plugin>
+
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changelog-plugin</artifactId>
                 <version>2.3</version>
@@ -485,28 +487,35 @@
                         </configuration>
                         <reports>
                             <report>changelog</report>
-                            <!--
-                            <report>dev-activity</report>
-                            <report>file-activity</report>
-                            -->
                         </reports>
                     </reportSet>
                 </reportSets>
-            </plugin>
-            <plugin>
+            </plugin-->
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <configuration>
                     <configLocation>config/google_checks.xml</configLocation>
                 </configuration>
-            </plugin>
+            </plugin-->
         </plugins>
     </reporting>
 
     <developers>
-        <!--
-       See http://www.ohloh.net/p/jamwiki/contributors
-        -->
+        <developer>
+            <id>cplerch</id>
+            <name>Christian P. Lerch</name>
+            <organization>km-works</organization>
+            <url></url>
+            <roles>
+                <role>project lead</role>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>-8</timezone>
+        </developer>
+        <!-- LEGACY DEVELOPERS:
+             See also http://www.ohloh.net/p/jamwiki/contributors
         <developer>
             <id>wrh2</id>
             <name>Ryan Holliday</name>
@@ -626,9 +635,11 @@
                 <role>developer</role>
             </roles>
         </developer>
+        -->
     </developers>
     
     <contributors>
+    <!-- LEGACY CONTRIBUTORS:
         <contributor>
             <name>Fernando Fernandes</name>
             <email>leandes</email>
@@ -787,7 +798,6 @@
                 <role>translator (Ukranian)</role>
             </roles>
         </contributor>
-        <!-- TODO indicate roles -->
         <contributor>
             <name>AleXey "lexis" Rumyantsev</name>
             <email>lexis@mail.ru</email>
@@ -817,7 +827,6 @@
             <name>Hanspeter Klapf</name>
             <email>hanspeterklapf</email>
         </contributor>
-        <!-- VQWiki developers and contributors -->
         <contributor>
             <name>Martijn van der Kleijn</name>
             <organization>VQWiki project</organization>
@@ -924,6 +933,6 @@
                 <role>translator</role>
             </roles>
         </contributor>
+    -->
     </contributors>
-
 </project>
